--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "element-ui": "^2.4.1",
+    "fecha": "^2.3.3",
     "gray-matter": "^4.0.1",
     "highlight.js": "^9.12.0",
     "markdown-it": "^8.4.1",
