--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "element-ui": "^2.4.1",
     "fecha": "^2.3.3",
     "gray-matter": "^4.0.1",
     "highlight.js": "^9.12.0",
@@ -24,6 +23,7 @@
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
     "vue": "^2.5.2",
+    "vue-awesome": "^3.0.5",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
