--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "fecha": "^2.3.3",
     "gray-matter": "^4.0.1",
     "highlight.js": "^9.12.0",
     "markdown-it": "^8.4.1",
@@ -20,6 +19,7 @@
     "markdown-it-emoji": "^1.4.0",
     "markdown-it-table-of-contents": "^0.3.6",
     "module": "^1.2.5",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
     "vue": "^2.5.2",
