--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "gitalk": "^1.4.1",
     "gray-matter": "^4.0.1",
     "highlight.js": "^9.12.0",
     "markdown-it": "^8.4.1",
