--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass-loader": "^7.0.3",
     "vue": "^2.5.2",
     "vue-awesome": "^3.0.5",
+    "vue-function-api": "^2.2.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
