--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
     "gray-matter": "^4.0.1",
     "highlight.js": "^9.12.0",
     "iview": "^3.1.5",
@@ -24,9 +25,15 @@
     "moment": "^2.22.2",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
+    "ts-loader": "^3.5.0",
+    "tslint": "^5.11.0",
+    "tslint-config-standard": "^8.0.1",
+    "tslint-loader": "^3.5.4",
+    "typescript": "^3.1.4",
     "vue": "^2.5.2",
     "vue-awesome": "^3.0.5",
     "vue-function-api": "^2.2.0",
+    "vue-property-decorator": "^7.2.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
